kube-system/cilium-network-policy-metrics-server-allow-egress-kube-apiserver.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: metrics-server-allow-egress-kube-apiserver
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      k8s-app: metrics-server
  egress:
    - toEntities:
        - kube-apiserver
    - toServices:
        - k8sService:
            serviceName: kubernetes
            namespace: default
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
