kube-system/cilium-network-policy-metrics-server-allow-ingress-kube-apiserver.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: metrics-server-allow-ingress-kube-apiserver
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      k8s-app: metrics-server
  ingress:
    - fromEntities:
        - kube-apiserver
        - remote-node
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
