kube-system/network-policy-postgres-exporter-allow-ingress-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-exporter-allow-ingress-monitoring
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      app: postgres-exporter
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 9187
